clusters/k3s/apps/ggez-auth/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ggez-auth
spec:
  type: ClusterIP
  selector:
    app: ggez-auth
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
