clusters/k3s/apps/ggez-auth/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ggez-auth
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: ggez-auth-ggez-auth-rate-limit@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: auth.devcw.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ggez-auth
                port:
                  number: 80
  tls:
    - hosts:
        - auth.devcw.xyz
